# refry

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  changelog.md  pyproject.toml
.github/workflows/: contributing.yml  latest-changes.yml
src/refry/: __init__.py  main.py
tests/: test_refry.py
