[project]
name = "refry"
version = "0.1.0"
description = "Refry is a modern, maintained, typed easy-to-use retry decorator."
authors = [
    { name = "Daniel Roy Greenfeld", email = "daniel@feldroy.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.urls]
homepage = "https://github.com/pydanny/refry"
bugs = "https://github.com/pydanny/refry/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.8",
    "pytest>=8.2.2",
    "mypy>=1.10.0",
]

[tool.rye.scripts]
format = "ruff format . --fix && ruff check ."
test = "pytest ."

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/refry"]
